--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\javie\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mariadb-java-client-3.2.0.jar=C:\\Users\\ivan_\\Desktop\\MySql\\ULP\\mariadb-java-client-3.2.0.jar
+user.properties.file=C:\\Users\\ivan_\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
