--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\javie\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mariadb-java-client-3.2.0.jar=F:\\Usuario\\Desktop\\DRIVERS
+user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
