--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -60,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ulp.ULP
+main.class=Vistas.menuPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
